--- a/docs/3.2_docs.md
+++ b/docs/3.2_docs.md
@@ -1,47 +1,30 @@
 
 ## Updating documentation
 
-Documentation is written in Markdown format and then rendered to HTML using Pandoc. The documentation can be opened using the application drawer to start the Documentation server. Restarting the documentation server will update the documentation to reflect changes.
+Documentation is written in Github Flavored Markdown and then rendered to a final Markdown file by Pandoc. The documentation can be previewed in the Workbench file browser window.
 
-All documentation is in the `docs` folder. Any markdown files in this folder will be concatenated, in alphabetic order, to produce the full manual.
+### Table of Contents file
 
-Save all static content, including images, to the `_static` folder. Static content outside of this folder may work in Markdown format, but will break in HTML format.
+The most important file for the documentation is the table of contents file at `docs/_TOC.md`. This file defines a list of files that should be concatenated in order to generate the final README manual. Files must be on this list to be included.
+
+### Header file
+
+The only exception to the table of contents rule is the header file at `docs/_HEADER.md`. This file will preprend the README manual and exists before the Table of Contents. It will always be included and should not be included in the table of contents file.
+
+### Static Content
+
+Save all static content, including images, to the `_static` folder. This will help with organization.
 
 ### Dynamic documentation
 
-It may be helpful to have documents that update and write themselves. To create a dynamic document, simply create a Python script with the `.md.py` extension. The script must be executable and should write the Markdown formatted document to stdout. During build time, this script will be run to update the markdown file with the same name.
+It may be helpful to have documents that update and write themselves. To create a dynamic document, simply create an executable file that writes the Markdown formatted document to stdout. During build time, if an entry in the table of contents file is executable, it will be executed and its stdout will be used in its place.
 
-### HTML template
+### Rendering documentation
 
-There are two files that control the template.
+`Make` is used to manage the generation of the `README.md` file. Running the following make commands from the `docs/` directory will perform the following actions.
 
-- `.template.html` is the HTML template used by Pandoc. It is based heavily on a project called [Easy Pandoc Templates](https://github.com/ryangrose/easy-pandoc-templates). This file can be customized or replaced to change how to documentation looks. For tips on doing this, check out the [Pandoc documentation](https://pandoc.org/MANUAL.html#templates).
-- `.puppeteer.json` is a configuration file used in Mermaid rendering. There is not likely to be a situation where modifying this is necessary.
+- `make` or `make ../README.md` will update the README file if any of the pages have changed since it was last generated.
 
-### Publishing documentation
+- `make clean` will cleanup the existing README and static assets.
 
-`Make` can be used to manage the lifecycle of the documentation.
-
-- `make render` will render all of the dynamic documentation pages to Markdown
-- `make build` will build the documentation HTML from Markdown
-- `make clean` will clean all cached builds
-- `make serve` will start a local webserver for viewing the documentation
-- `make stop` will stop a running webserver
-- `make status` will check the status of the webserver
-
-### Mermaid support
-
-The documentation supports creating dynamic flowcharts using mermaid. This is done using the [mermaid-filter](https://github.com/raghur/mermaid-filter) extension for Pandoc. To include a diagram in your documentation, include something like this:
-
-~~~markdown
-```mermaid
-flowchart TD
-    A[Christmas] -->|Get money| B(Go shopping)
-    B --> C{Let me think}
-    C -->|One| D[Laptop]
-    C -->|Two| E[iPhone]
-    C -->|Three| F[fa:fa-car Car]
-```
-~~~
-
-For help with the Mermaid syntax, reference the [Mermaid documentation](https://mermaid.js.org/intro/) and check out the [Mermaid Live Editor](https://mermaid.live/).
+- `make all` will force the generation of the README manual.
