--- a/code/upload-pdfs.ipynb
+++ b/code/upload-pdfs.ipynb
@@ -73,8 +73,9 @@
     "\n",
     "# \"nvapi-xxx\" is the NVIDIA API KEY format. If you have not configured this variable, be sure to do so. \n",
     "embedding_model = NVIDIAEmbeddings(\n",
-    "    model=config.embedding_model.name, \n",
-    "    api_key=config.nvidia_api_key, \n",
+    "    model=config.embedding_model.name,\n",
+    "    base_url=str(config.embedding_model.url),\n",
+    "    api_key=config.nvidia_api_key,\n",
     "    truncate=\"END\"\n",
     ")"
    ]
@@ -105,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.vectorstores.milvus import Milvus\n",
+    "from langchain_milvus.vectorstores.milvus import Milvus\n",
     "\n",
     "vector_store = Milvus(\n",
     "    embedding_function=embedding_model,\n",
