Add Python Linting Pipeline (#21)
Added Python linters and updated code to meet new requirements.

--- a/docs/3.0_contributing.md
+++ b/docs/3.0_contributing.md
@@ -1,3 +1,18 @@
 # Contributing
 
 All feedback and contributions to this project are welcome. When making changes to this project, either for personal use or for contributing, it is recomended to work on a fork on this project. Once the changes have been completed on the fork, a Merge Request should be opened.
+
+## Code Style
+
+This project has been configured with Linters that have been tuned to help the code remain consistent while not being overly burdensome. We use the following Linters:
+
+- Bandit is used for security scanning
+- Pylint is used for Python Syntax Linting
+- MyPy is used for type hint linting
+- Black is configured for code styling
+- A custom check is run to ensure Jupyter Notebooks do not have any output
+- Another custom check is run to ensure the README.md file is up to date
+
+The embedded VSCode environment is configured to run the linting and checking in realtime.
+
+To manually run the linting that is done by the CI pipelines, execute `/project/code/tools/lint.sh`. Individual tests can be run be specifying them by name: `/project code/tools/lint.sh [deps|pylint|mypy|black|docs|fix]`. Running the lint tool in fix mode will automatically correct what it can by running Black, updating the README, and clearing the cell output on all Jupyter Notebooks.
