--- a/docs/3.2_docs.md
+++ b/docs/3.2_docs.md
@@ -3,13 +3,17 @@
 
 Documentation is written in Github Flavored Markdown and then rendered to a final Markdown file by Pandoc. The documentation can be previewed in the Workbench file browser window.
 
+### Header file
+
+The header file is the first file used to compile the documentation. This file can be found at `docs/_HEADER.md`. The contents of this file will be written verbatim, without any manipulation, to the README before anything else.
+
+### Summary file
+
+The summary file contains quick description and graphic that describe this project. The contents of this file will be added to the README immediately after the header and just before the table of contents. This file is processed by Pandoc to embed images before writing to the README.
+
 ### Table of Contents file
 
 The most important file for the documentation is the table of contents file at `docs/_TOC.md`. This file defines a list of files that should be concatenated in order to generate the final README manual. Files must be on this list to be included.
-
-### Header file
-
-The only exception to the table of contents rule is the header file at `docs/_HEADER.md`. This file will preprend the README manual and exists before the Table of Contents. It will always be included and should not be included in the table of contents file.
 
 ### Static Content
 
