Fixed chain server reload issue and some typos (#43)
Fixes #35

---------

Co-authored-by: Amelia Taihui Ye <taihui@umich.edu>

--- a/docs/3.1_frontend.md
+++ b/docs/3.1_frontend.md
@@ -2,7 +2,7 @@
 
 The frontend has been designed in an effort to minimize the required HTML and Javascript development. A branded and styled Application Shell is provided that has been created with vanilla HTML, Javascript, and CSS. It is designed to be easy to customize, but it should never be required. The interactive components of the frontend are all created in Gradio and mounted in the app shell using iframes.
 
-Along the top of the app shell is a menu listing the avaiable views. Each view may have its own layout consisting of one or a few pages.
+Along the top of the app shell is a menu listing the available views. Each view may have its own layout consisting of one or a few pages.
 
 ### Creating a new page
 
@@ -10,14 +10,14 @@ Pages contain the interactive components for a demo. The code for the pages is i
 
 1. Create a new folder in the pages directory
 1. Create an `__init__.py` file in the new directory that uses Gradio to define the UI. The Gradio Blocks layout should be defined in a variable called `page`.
-1. It is recomended that any CSS and JS files needed for this view be saved in the same directory. See the `chat` page for an example.
+1. It is recommended that any CSS and JS files needed for this view be saved in the same directory. See the `chat` page for an example.
 1. Open the `code/frontend/pages/__init__.py` file, import the new page, and add the new page to the `__all__` list.
 
 > **NOTE:** Creating a new page will not add it to the frontend. It must be added to a view to appear on the Frontend.
 
 ### Adding a view
 
-View consist of one or a few pages and should function independantly of each other. Views are all defined in the `code/frontend/server.py` module. All declared views will automatically be added to the Frontend's menu bar and made available in the UI.
+View consist of one or a few pages and should function independently of each other. Views are all defined in the `code/frontend/server.py` module. All declared views will automatically be added to the Frontend's menu bar and made available in the UI.
 
 To define a new view, modify the list named `views`. This is a list of `View` objects. The order of the objects will define their order in the Frontend menu. The first defined view will be the default.
 
@@ -72,7 +72,7 @@ The frontend contains a logo on the top left of the page. To modify the logo, an
 
 #### Color scheme
 
-The styling of the App Shell is defined in `code/frontend/_static/css/style.css`. The colors in this file may be safely modfied.
+The styling of the App Shell is defined in `code/frontend/_static/css/style.css`. The colors in this file may be safely modified.
 
 The styling of the various pages are defined in `code/frontend/pages/*/*.css`. These files may also require modification for custom color schemes.
 
@@ -92,7 +92,7 @@ The following will post a message to the app shell (`window.top`). The message w
 window.top.postMessage({"use_kb": true}, '*');
 ```
 
-This message will automatically be sent to all pages by the app shell. The following sample code will consume the message on another page. This code will run asynchronously when a `message` event is recieved. If the message is trusted, a Gradio component with the `elem_id` of `use_kb` will be updated to the value specified in the message. In this way, the value of a Gradio component can be duplicated across pages.
+This message will automatically be sent to all pages by the app shell. The following sample code will consume the message on another page. This code will run asynchronously when a `message` event is received. If the message is trusted, a Gradio component with the `elem_id` of `use_kb` will be updated to the value specified in the message. In this way, the value of a Gradio component can be duplicated across pages.
 
 ```javascript
 window.addEventListener(
