--- a/docs/3.3_environment.md
+++ b/docs/3.3_environment.md
@@ -6,7 +6,7 @@ Most of the configuration for the development environment happens with Environme
 
 ## Python Environment Packages
 
-This project uses one Python environment at `/usr/bin/python3` and dependencies are managed with `pip`. Becuse all development is done inside a container, any changes to the Python environment will be ephemeral. To permanently install a Python package, add it to the [`requirements.txt`](./requirements.txt) file or use the Workbench UI.
+This project uses one Python environment at `/usr/bin/python3` and dependencies are managed with `pip`. Because all development is done inside a container, any changes to the Python environment will be ephemeral. To permanently install a Python package, add it to the [`requirements.txt`](./requirements.txt) file or use the Workbench UI.
 
 ## Operating System Configuration
 
